preloader for all sites

--- a/lite.html
+++ b/lite.html
@@ -21,6 +21,10 @@
 </head>
 <body>
 
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+
     <div class="mobile">
 
         <div class="quick_btn">
@@ -131,5 +135,13 @@
 
     <script src="scripts/menu.js"></script>
     <script src="scripts/night_mode.js"></script>
+
+    <script>
+        $(window).on("load",function(){
+            $(".loader-wrapper").attr("style", "opacity:0")
+            setTimeout(expload, 1000)
+            $(".loader-wrapper").fadeOut('slow')
+        });
+    </script>
 </body>
 </html>
