--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,10 @@
 
 </head>
 <body>
+    
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
 
     <div class="mobile">
 
@@ -216,5 +220,14 @@
     <script src="scripts/menu.js"></script>
     <script src="scripts/night_mode.js"></script>
     <script src="scripts/gallery.js"></script>
+
+    <script>
+        $(window).on("load",function(){
+            $(".loader-wrapper").attr("style", "opacity:0")
+            setTimeout(expload, 1000)
+            $(".loader-wrapper").fadeOut('slow')
+        });
+    </script>
+
 </body>
 </html>
