--- a/portfolio.html
+++ b/portfolio.html
@@ -159,18 +159,24 @@
                         <img class="loga2" src="/galeria/loga/2.png" alt="">
                     </div>
                     <div class="obraz inl loga obraz22">
-                        <img class="loga3" src="/galeria/loga/3.png" alt="">
+                        <img class="loga3" src="/galeria/loga/3.jpg" alt="">
                     </div>
                     <div class="obraz inl loga obraz23">
-                        <img class="loga4" src="/galeria/loga/4.png" alt="">
+                        <img class="loga4" src="/galeria/loga/4.jpg" alt="">
                     </div>
                     <div class="obraz inl loga obraz24">
                         <img class="loga5" src="/galeria/loga/5.png" alt="">
                     </div>
                     <div class="obraz inl loga obraz25">
-                        <img class="loga6" src="/galeria/loga/6.png" alt="">
+                        <img class="loga6" src="/galeria/loga/6.jpg" alt="">
                     </div>
-                    <div class="obraz inl inne obraz26">
+                    <div class="obraz inl loga obraz26">
+                        <img class="loga6" src="/galeria/loga/7.jpg" alt="">
+                    </div>
+                    <div class="obraz inl loga obraz27">
+                        <img class="loga6" src="/galeria/loga/8.jpg" alt="">
+                    </div>
+                    <div class="obraz inl inne obraz28">
                         <img class="inne1" src="/galeria/inne/1.jpg" alt="">
                     </div>
 
